maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: not found: value keepHansOnSideWall
 {droite();keepHansOnSideWall()}
           ^